EP-4865 (#919)